# harpy

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  harpy.sln  pyproject.toml  run_harpy.py
.github/workflows/: format.yml  test.yml
Harpy/: Harpy.csproj  InvalidSyntaxException.cs  Program.cs
Harpy/AST/: HarbourASTNode.cs  HarbourSyntaxTokenNode.cs  IHarbourASTNode.cs  SourceRoot.cs
Harpy/CodeGen/: CodeGenContext.cs  IndexAdjuster.cs  TypeInference.cs
Harpy/Lexer/: HarbourSyntaxElement.cs  HarbourSyntaxKind.cs  HarbourSyntaxToken.cs  HarbourSyntaxTrivia.cs  Lexer.cs  SourceReader.cs  SyntaxElement.cs  SyntaxType.cs  Token.cs  Trivia.cs
Harpy/Parser/: ExpressionParser.cs  Parser.cs  Precedence.cs
HarpyTests/: HarpyTests.csproj  TestHarpy.cs  TestLexer.cs
HarpyTests/CodeGenTests/: TestCodeGen.cs  TestCodeGenContext.cs  TestExpressionCodeGen.cs  TestIndexAdjuster.cs  TestStatementCodeGen.cs  TestTypeInference.cs
HarpyTests/LexerTests/: TestLexer.cs  TestSourceReader.cs
HarpyTests/ParserTests/: TestExpressionParser.cs  TestParser.cs
harpy/: __main__.py  ast_node.py  expression_parser.py  harbour_parser.py  lexer.py  parser.py  precedence.py  source_reader.py  source_root.py  token.py  token_type.py
harpy/expressions/: __init__.py  assign_expression.py  call_expression.py  expression.py  index_expression.py  (+6 more)
src/: harbour_parser.py  lexer.py  lexer.rs  lib.rs  main.py  parser.py  parser.rs  precedence.py  token.py  token.rs  token_type.py
tests/: test_expression_parser.py  test_harbour_parser.py  test_lexer.py  test_parser.py
(+147 files in other folders)
