[project]
name = "harpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[dependency-groups]
dev = [
    "basedpyright>=1.31.4",
    "debugpy>=1.8.17",
    "isort>=6.1.0",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
]
